<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/icon_bar"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/alcohol_menu"
                    android:orderInCategory="100"
                    android:title="@string/alcohol"
                    />
                <item
                    android:id="@+id/action_favorite"
                    android:title="@string/action_favorite"
                    android:orderInCategory="2"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>