<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    tools:context=".Activities.DetailActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/detail_horizontal_margin"
        android:paddingRight="@dimen/detail_horizontal_margin"
        android:id="@+id/linearLayout">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2">

        <android.support.v4.widget.Space
            android:layout_height="@dimen/detail_view_padding_vertical"
            android:layout_columnSpan="2"
            android:layout_columnWeight="4"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:textStyle="bold"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/name_title"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_producer_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/producer"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/producer"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_volume_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/volume"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/volume"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_style_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/style"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/style"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />
        <TextView
            android:id="@+id/detail_description_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_update_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/update"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/updated_at"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />


        <TextView
            android:id="@+id/detail_varietal_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/varietal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/varietal"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />
        <TextView
            android:id="@+id/detail_price_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_category_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_origin_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/origin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_alcohol_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/alcohol_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/alcohol_content"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/detail_size"
            android:layout_columnWeight="20"
            android:layout_gravity="fill"
            tools:text="19" />
    </GridLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/store_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="14dp"
        tools:listitem="@layout/store_content" />

</LinearLayout>